@startuml
title ITrigger and GameEvent — board observers

skinparam linetype ortho

/'
  Previously: 15 empty marker classes implementing a raw ITrigger, with a
  Battle.runTriggers() that took no argument. Nothing could actually be
  dispatched, and an event's payload had nowhere to live.

  Now: the events are the sealed hierarchy (they carry data), and there is one
  trigger record that names the event it listens for.
'/

interface ITrigger <<sealed>> {
    - on: Class<? extends GameEvent>
    - condition: ICondition<ResolutionContext>
    - onTrigger: IAttempt

    + appliesTo(GameEvent): boolean
    + fire(ResolutionContext): AttemptResult
}

class Trigger <<record>> implements ITrigger {}

/'
  Where dispatch lives. Not on Battle: Battle is a state holder, and giving it
  the job would pull the engine into the model's dependency cycle.
'/
class TriggerDispatcher <<static>> {
    + dispatch(Battle, GameEvent): DispatchResult
    + collect(Battle): List<TriggerSource>
}

/' A trigger plus the Pokemon that supplied it, which becomes
   ResolutionContext.source when it fires. Empty for a Stadium. '/
class TriggerSource <<record>> {
    - trigger: ITrigger
    - holder: Optional<PokemonInPlay>
    - controller: Side
}

class DispatchResult <<record>> {
    - results: List<AttemptResult>
    + vetoed(): boolean
}

/'
  Every event answers "who was that about?", so a trigger can ask the one
  question it almost always needs to ask without a condition per event type.
  See EventConcerns and EventSideIs in ICondition.puml.
'/
interface GameEvent <<sealed>> {
    + subject(): Optional<PokemonInPlay>
    + side(): Optional<Side>
}

/' --- turn structure --- '/
class TurnStart <<record>> implements GameEvent {
    - side: Side
}
class TurnEnd <<record>> implements GameEvent {
    - side: Side
}

/' --- combat --- '/
class AttackDeclared <<record>> implements GameEvent {
    - attacker: PokemonInPlay
    - action: Action
}
class DamageDealt <<record>> implements GameEvent {
    - source: Optional<PokemonInPlay>
    - target: PokemonInPlay
    - amount: int
}
/' Dispatched by TurnEngine.checkKnockouts while the Pokemon is still in play,
   so its own Tool and ability can react; it leaves play straight after. '/
class Knockout <<record>> implements GameEvent {
    - knockedOut: PokemonInPlay
    - by: Optional<PokemonInPlay>
}
class Healed <<record>> implements GameEvent {
    - target: PokemonInPlay
    - amount: int
}

/' --- statuses --- '/
class StatusApplied <<record>> implements GameEvent {
    - target: PokemonInPlay
    - status: IStatus
}
class StatusRemoved <<record>> implements GameEvent {
    - target: PokemonInPlay
    - status: IStatus
}

/' --- cards --- '/
class CardPlayed <<record>> implements GameEvent {
    - side: Side
    - card: CardInstance
}
class Evolved <<record>> implements GameEvent {
    - from: PokemonCard
    - to: PokemonInPlay
}
class ToolAttached <<record>> implements GameEvent {
    - holder: PokemonInPlay
    - tool: CardInstance
}
class ToolRemoved <<record>> implements GameEvent {
    - holder: PokemonInPlay
    - tool: CardInstance
}
class Retreated <<record>> implements GameEvent {
    - from: PokemonInPlay
    - to: PokemonInPlay
}
class EnergyAttached <<record>> implements GameEvent {
    - target: PokemonInPlay
    - type: Type
}

/'
  NOT BUILT. Nothing could consume it — a trigger fires with a fresh
  ResolutionScope, so it cannot read the flip back — and dispatching on every
  flip would walk the board constantly for a card pattern Pocket does not have.
'/
class CoinFlipped <<record>> implements GameEvent {
    - result: FlipResult
}

Trigger *-- IAttempt
ITrigger ..> GameEvent : matches
TriggerDispatcher ..> TriggerSource
TriggerDispatcher ..> DispatchResult
TriggerSource *-- ITrigger

note bottom of Trigger
  **Collection, not registration.**

  TriggerDispatcher.collect() walks the current board on every
  dispatch — statuses, attached tools, the stadium, and passive
  abilities of everything in play — instead of subscribing and
  unsubscribing as cards enter and leave.

  A board is ~10 cards, so the cost is irrelevant, and it makes
  the whole class of stale-listener bug impossible: a Tool that
  was just discarded cannot fire, and a Pokemon that just
  evolved brings its new ability with it for free.

  Each trigger is fired with ResolutionContext.source set to its
  HOLDER and .event set to the dispatched event, so `Self`,
  `EventConcerns` and `EventDamage` all resolve correctly.
end note

note as NotBuilt #FFE0E0
  **Modelled, not built.**

  **CoinFlipped** — nothing could consume it. A trigger fires
  with a fresh ResolutionScope, so it cannot read the flip
  back, and dispatching on every flip would walk the board
  constantly for a pattern Pocket does not have.

  **PhaseEntered** was cut along with the Phase enum: no card
  reads the phase. See GameFlow.puml.

  Who dispatches what: effects and actions announce their own
  events; **TurnEngine** announces **TurnStart**, **TurnEnd**
  and **Knockout**.
end note

NotBuilt .. CoinFlipped

@enduml
